--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Glyph Hack on canvas</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <!--[if lt IE 9]>
         <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -15,7 +15,7 @@
     <!--<link rel="shortcut icon" href="">-->
   </head>
   <body>
-    <canvas id="stage" width="640" height="712" style="margin: 20px;"></canvas>
+    <canvas id="stage" width="640" height="712"></canvas>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/jcanvas/jcanvas.min.js"></script>
     <script src="js/jquery-class/jquery.class.min.js"></script>
