* add libs that available image download

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <body>
     <canvas id="stage" width="640" height="712"></canvas>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/toBlob/canvas-toBlob.js"></script>
+    <script src="js/file-save/FileSaver.min.js"></script>
     <script src="js/jcanvas/jcanvas.min.js"></script>
     <script src="js/jquery-class/jquery.class.min.js"></script>
     <script src="js/glyph-hack-canvas.js"></script>
